pgadmin4-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin4-ingress
  #annotations:
  #  nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  ## add 127.0.0.1 pgadmin4.local to your etc/hosts
  - host: pgadmin4.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: pgadmin4
            port:
              number: 80
